Update fr.json (POEditor.com)

--- a/PaperZee/utils/lang/fr.json
+++ b/PaperZee/utils/lang/fr.json
@@ -168,6 +168,11 @@
         "level": {
             "one": "",
             "other": ""
+        },
+        "rank": "",
+        "players": {
+            "one": "",
+            "other": ""
         }
     },
     "search": {
@@ -185,8 +190,13 @@
             "evo": "",
             "pouch": "",
             "can_host": "Peut accueillir",
-            "lands_on": ""
-        }
+            "lands_on": "",
+            "hosts": "",
+            "possible_types": "",
+            "possible_hosts": "",
+            "host_types": ""
+        },
+        "type_info": ""
     },
     "auth": {
         "add": "",
@@ -303,5 +313,14 @@
         "build_n": "",
         "continue": "",
         "no_changelog": ""
+    },
+    "clan_req": {
+        "Captures": "",
+        "Points": "",
+        "Deploys": "",
+        "Activity": "",
+        "Days of": "",
+        "Total": "",
+        "Renovate": ""
     }
 }
